--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,36 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Montserrat:400,400i,700");
-@import url("https://fonts.googleapis.com/css?family=Inconsolata:400,700");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,700");
 body {
   margin: 0;
-  font-family: "Montserrat";
+  font-family: "Roboto Mono";
   overflow: hidden;
-  background-color: #2a2a2a;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+h1{
+  font-size: 20px;
+  text-align:center
+}
+
+h2{
+  font-size: 11px;
+  text-align:center;
+}
+
+h3{
+  font-size: 9px;
+  text-align:left;
+}
+
+p{
+  font-size: 5px;
+  text-align:left;
 }
 
 pre {
   background-color: #3a3a3a;
   padding: 20px;
   border-radius: 5px;
-}
-
-.token.string,
-.token.number,
-.token.comment,
-.token.keyword,
-.token.attr-value {
-  opacity: 0.6;
 }
 
 section {
@@ -30,117 +41,37 @@ section {
   color: #fff;
   position: relative;
 }
-#page-1 .text, #page-1-clone .text {
+
+#page-1 {
   background-color: #3F51B5;
 }
-#page-2 .text {
+
+#page-2 {
   background-color: #673AB7;
 }
-#page-3 .text {
+
+#page-3 {
   background-color: #9C27B0;
 }
-#page-4 .text {
+
+#page-4 {
   background-color: #E91E63;
 }
-#page-5 .text {
+
+#page-5 {
   background-color: #F44336;
 }
-#page-6 .text, #page-6-clone .text {
+
+#page-6 {
   background-color: #4CAF50;
 }
 
-.scroller {
-  position: absolute;
-  bottom: 20px;
-  left: 50%;
-  -webkit-transform: translate3d(-50%, 0, 0);
-          transform: translate3d(-50%, 0, 0);
-  width: 40px;
-  height: 65px;
-  border: 4px solid #fff;
-  border-radius: 30px;
-}
-.scroller::after {
-  position: absolute;
-  top: 12px;
-  left: 50%;
-  -webkit-transform: translate3d(-50%, 0, 0);
-          transform: translate3d(-50%, 0, 0);
-  width: 14px;
-  height: 14px;
-  border-radius: 50%;
-  background-color: #fff;
-  -webkit-animation: 1200ms ease 0ms forwards infinite scroll;
-          animation: 1200ms ease 0ms forwards infinite scroll;
-  content: "";
-}
-.scroller small {
-  position: absolute;
-  width: 174px;
-  left: -64px;
-  top: -34px;
+#page-1-clone {
+  background-color: #3F51B5;
 }
 
-@-webkit-keyframes scroll {
-  from {
-    -webkit-transform: translate3d(-50%, 0, 0);
-            transform: translate3d(-50%, 0, 0);
-  }
-  to {
-    -webkit-transform: translate3d(-50%, 10px, 0);
-            transform: translate3d(-50%, 10px, 0);
-    opacity: 0;
-  }
-}
-
-@keyframes scroll {
-  from {
-    -webkit-transform: translate3d(-50%, 0, 0);
-            transform: translate3d(-50%, 0, 0);
-  }
-  to {
-    -webkit-transform: translate3d(-50%, 10px, 0);
-            transform: translate3d(-50%, 10px, 0);
-    opacity: 0;
-  }
-}
-.anchors {
-  position: fixed;
-  top: 25px;
-  right: 50px;
-  z-index: 100;
-}
-.anchors ul {
-  margin: 0;
-  padding: 0;
-}
-.anchors ul li {
-  float: left;
-  list-style: none;
-}
-.anchors ul li a {
-  padding: 12px;
-  color: #fff;
-  text-decoration: none;
-  position: relative;
-}
-.anchors ul li a.active::after {
-  position: absolute;
-  bottom: 0px;
-  left: 10%;
-  width: 80%;
-  height: 3px;
-  background-color: rgba(255, 255, 255, 0.6);
-  content: "";
-}
-
-.text {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column;
+#page-6-clone {
+  background-color: #4CAF50;
 }
 
 nav {
@@ -242,332 +173,11 @@ nav ul li:hover a span {
   margin: -5px 0px 0px -5px;
 }
 
-#settings-open {
-  color: #fff;
-  font-size: 35px;
-  position: absolute;
-  right: -60px;
-  top: 10px;
-  width: 35px;
-  height: 35px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.pg-horizontal nav {
+  width: 100vw;
+  left: 0;
+  bottom: 20px;
 }
-#settings-open span {
-  line-height: 0;
-}
-#settings-open span::before {
-  content: "\F8BA";
-}
-
-#settings {
-  position: fixed;
-  left: 10px;
-  top: 10px;
-  width: 250px;
-  font-family: "Inconsolata";
-  font-size: 14px;
-  -webkit-transform: translate3d(-265px, 0, 0);
-          transform: translate3d(-265px, 0, 0);
-  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-}
-#settings.active {
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-}
-#settings.active #settings-open span::before {
-  content: "\F5AD";
-}
-#settings .settings-inner {
-  border: 3px solid #fff;
-  border-radius: 4px;
-  padding: 15px;
-}
-#settings h4 {
-  margin: 10px 0 5px 0;
-  padding: 6px 15px;
-  color: #fff;
-  text-transform: uppercase;
-}
-#settings button, #settings select {
-  border: 3px solid #fff;
-  border-radius: 4px;
-  background-color: transparent;
-  padding: 6px 12px;
-  font-family: "Inconsolata";
-  font-weight: bold;
-  color: #fff;
-  cursor: pointer;
-  width: 125px;
-}
-#settings button:hover, #settings select:hover {
-  background-color: #fff;
-  color: #000;
-}
-#settings button {
+.pg-horizontal nav ul li {
   float: left;
-  width: 75px;
-  margin: 0 10px 15px 0;
-}
-#settings select {
-  display: block;
-  margin-top: 5px;
-}
-#settings label {
-  color: #fff;
-  font-weight: bold;
-}
-#settings .setting {
-  padding: 6px 12px;
-}
-#settings .output {
-  float: right;
-}
-
-.mb-bar {
-  background-color: #fff;
-}
-
-.mb-track-y {
-  width: 5px;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-#scroll {
-  height: 90vh;
-}
-
-#listeners {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-flow: column;
-}
-#listeners li {
-  list-style: none;
-  border: 3px solid #fff;
-  border-radius: 3px;
-  color: #fff;
-  padding: 6px 12px;
-  margin: 0 10px 10px 0;
-  font-weight: bold;
-}
-#listeners li.active {
-  background-color: #fff;
-  color: #000;
-}
-
-:not(pre) > code[class*="language-"], pre[class*="language-"] {
-  background: transparent;
-  border: 3px solid #fff;
-}
-
-code {
-  font-weight: bold;
-  font-family: Inconsolata;
-}
-
-@-webkit-keyframes spin {
-  from {
-    -webkit-transform: rotate3d(0, 0, 1, 0deg);
-            transform: rotate3d(0, 0, 1, 0deg);
-  }
-  to {
-    -webkit-transform: rotate3d(0, 0, 1, 360deg);
-            transform: rotate3d(0, 0, 1, 360deg);
-  }
-}
-
-@keyframes spin {
-  from {
-    -webkit-transform: rotate3d(0, 0, 1, 0deg);
-            transform: rotate3d(0, 0, 1, 0deg);
-  }
-  to {
-    -webkit-transform: rotate3d(0, 0, 1, 360deg);
-            transform: rotate3d(0, 0, 1, 360deg);
-  }
-}
-.checkbox, .radio {
-  align-items: center;
-  display: flex;
-  min-height: 35px;
-  position: relative;
-}
-
-.radio input,
-.checkbox input {
-  border: 0 none !important;
-  clip: rect(0px, 0px, 0px, 0px) !important;
-  height: 1px !important;
-  margin: -1px !important;
-  overflow: hidden !important;
-  padding: 0 !important;
-  position: absolute !important;
-  width: 1px !important;
-}
-
-.radio > input + label,
-.checkbox > input + label {
-  cursor: pointer;
-  padding: 3px 0 0 30px;
-  position: relative;
-  color: #fff;
-}
-
-.radio > input:disabled + label,
-.checkbox > input:disabled + label {
-  opacity: 0.6;
-  cursor: not-allowed;
-}
-
-.radio > input + label::before,
-.radio > input + label::after,
-.checkbox > input + label::before,
-.checkbox > input + label::after {
-  font-family: "Material Design Icons";
-  font-size: 21px;
-  height: 25px;
-  left: 0;
-  position: absolute;
-  text-align: center;
-  top: 0px;
-  width: 25px;
-  font-weight: normal;
-}
-
-.checkbox > input + label::after {
-  content: "";
-}
-
-.checkbox > input:checked + label::after {
-  content: "";
-}
-
-.radio > input + label::after {
-  content: "";
-}
-
-.radio > input:checked + label::after {
-  content: "";
-}
-
-.rangeable-container {
-  margin: 20px 0 20px 0;
-}
-
-.rangeable-handle {
-  border-color: transparent;
-  width: 18px;
-  height: 18px;
-}
-
-.rangeable-progress {
-  height: 2px;
-  background-color: #fff;
-}
-
-.rangeable-tooltip {
-  background-color: transparent;
-}
-.rangeable-tooltip::before {
-  border-color: transparent;
-}
-
-.rangeable-track {
-  height: 8px;
-  width: 100%;
-  border-radius: 4px;
-  border: 3px solid #fff;
-  box-sizing: border-box;
-  background-color: transparent;
-}
-
-.selectr-selected {
-  background-color: transparent;
-  border: 3px solid #fff;
-  color: #fff;
-  font-weight: bold;
-  padding: 7px 28px 7px 18px;
-}
-.selectr-selected::before {
-  border-color: #fff transparent transparent;
-}
-
-.selectr-options {
-  padding: 8px;
-  overflow: hidden;
-}
-
-.selectr-option {
-  border-radius: 2px;
-  padding: 6px 10px;
-}
-
-.selectr-container.native-open .selectr-selected::before, .selectr-container.open .selectr-selected::before {
-  border-color: transparent transparent #000;
-}
-
-.selectr-container.open .selectr-selected {
-  color: #000;
-  background-color: #fff;
-  border-color: #fff #fff transparent;
-}
-
-.selectr-options-container {
-  border-width: 0 3px 3px;
-  border-color: transparent #fff #fff;
-}
-
-.progress {
-  position: fixed;
-  top: 10px;
-  left: 10px;
-  width: calc(100vw - 20px);
-  height: 5px;
-}
-.progress .bar {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  -webkit-transform: scale(0, 1);
-          transform: scale(0, 1);
-  -webkit-transform-origin: 0 0 0;
-          transform-origin: 0 0 0;
-  background-color: #fff;
-}
-
-.page-progress {
-  width: 40px;
-  height: 40px;
-  position: fixed;
-  left: 10px;
-  top: 20px;
-}
-
-svg {
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-}
-
-circle {
-  stroke: #fff;
-  fill: transparent;
-  stroke-dasharray: 87.9645943005 87.9645943005;
-  stroke-dashoffset: 87.9645943005;
-}
-
-div.Tooltip {	
-  position: absolute;			
-  text-align: left;							
-  padding: 5px;				
-  font: 9px sans-serif;		
-  background: none;	
-  border: 0px;		
-  border-radius: 8px;			
-  pointer-events: none;
 }
